Make script mode a command property, not a call at the write site
Review of the blank-line envelope turned up fifteen defects, and all but two
trace to one thing: skipEnvelope() does half of what its callers need. Machine
stdout has two requirements -- no envelope and no Unicode-to-ASCII rewrite --
and skipEnvelope only ever suppressed the blank line. So `jk ide --print-model`
shipped `Core -- shared utils` to the IDE plugin wherever isAnsi() is false (CI,
NO_COLOR, TERM=dumb), and `jk manual` emitted a playbook that no longer matched
JkManual.markdown().

Being a call rather than a property caused the rest. SelectiveCommand set it
inside a helper that the human prepare/run verbs also call, stripping their
chrome. TasksCommand, AuthTokenCommand and TrustCommand called it after chrome
had already printed, which cannot un-print a leading blank but does suppress the
trailing one.

CliCommand.scriptMode(Invocation) replaces all thirteen call sites. A default
method, so the 91 in-tree implementors and any out-of-tree ones keep compiling;
dispatch consults it once, before run, alongside the existing --output json
check. It takes the Invocation because five commands are script mode only for
certain verbs, and each of those now shares one resolver with run so the
predicate and the executed path cannot disagree. Scope is stdout: stderr stays
human-formatted and spaced even here, so `jk jdk home` can fail with a red wedge
while eval "$(jk jdk home)" stays byte-exact.

Also in the envelope machinery:

  - The trailing blank follows whichever stream wrote last, so a stderr failure
    is followed by the gap and a redirected stdout does not collect it. The
    stream side was decided by `dest == System.err`, false for every wrapper
    including CliOutput.stderr() itself.
  - Dispatch's error line goes through CliOutput, so an escaping exception is
    reported inside the envelope the doc already claimed it was.
  - skipTrailingBlank() at the eight inheritIO handoffs: `jk run > 